// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AbilityXToggle matches the snapshot 1`] = `
<div>
  <div
    class="d-flex collapse.show justify-content-center my-3 custom-control custom-switch"
  >
    <input
      checked=""
      class="custom-control-input my-auto"
      id="testAbility"
      type="checkbox"
    />
    <label
      class="custom-control-label drop-down-label mx-2 my-auto"
      for="testAbility"
    >
      Test
    </label>
    <select
      class="rounded-lg mr-4 px-2"
    >
      <option
        value="1"
      >
        1
      </option>
      <option
        value="2"
      >
        2
      </option>
      <option
        value="3"
      >
        3
      </option>
      <option
        value="4"
      >
        4
      </option>
    </select>
  </div>
</div>
`;

exports[`AbilityXToggle matches the snapshot when hidden 1`] = `
<div>
  <div
    class="collapse justify-content-center my-3 custom-control custom-switch"
  >
    <input
      checked=""
      class="custom-control-input my-auto"
      id="testAbility"
      type="checkbox"
    />
    <label
      class="custom-control-label drop-down-label mx-2 my-auto"
      for="testAbility"
    >
      Test
    </label>
    <select
      class="rounded-lg mr-4 px-2"
    >
      <option
        value="1"
      >
        1
      </option>
      <option
        value="2"
      >
        2
      </option>
      <option
        value="3"
      >
        3
      </option>
      <option
        value="4"
      >
        4
      </option>
    </select>
  </div>
</div>
`;
